--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     </style>
 
     <script src="js/three.js"></script>
+    <script type="text/javascript" src="js/libs/stats.min.js"></script>
+    <script type="text/javascript" src="js/libs/dat.gui.min.js"></script>
+    <script type="text/javascript" src="js/libs/FirstPersonControls.js"></script>
 
     <body>
 
