Rotate Change Color

--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
     <script type="text/javascript" src="js/libs/stats.min.js"></script>
     <script type="text/javascript" src="js/libs/dat.gui.min.js"></script>
     <script type="text/javascript" src="js/libs/FirstPersonControls.js"></script>
+    <script type="text/javascript" src="js/libs/Detector.js"></script>
 
     <body>
 
+        <div id="container"></div>
         <script src="script.js"></script>
 
 
