delete non used js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Sphere View</title>
+
     <style>
         body {
             margin: 0
@@ -15,12 +16,9 @@
         }
     </style>
 
-    <script src="js/three.js"></script>
+    <script type="text/javascript" src="js/three.js"></script>
     <script type="text/javascript" src="js/libs/stats.min.js"></script>
-    <script type="text/javascript" src="js/libs/dat.gui.min.js"></script>
-    <script type="text/javascript" src="js/libs/FirstPersonControls.js"></script>
-    <script type="text/javascript" src="js/libs/Detector.js"></script>
-
+    
     <body>
 
         <div id="container"></div>
