--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <script type="text/javascript" src="js/three.js"></script>
     <script type="text/javascript" src="js/libs/stats.min.js"></script>
+    <script trpe="text/javascript" src="js/libs/OrbitControls.js"></script>
     
     <body>
 
