--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     <script type="text/javascript" src="js/three.js"></script>
     <script type="text/javascript" src="js/libs/stats.min.js"></script>
     <script trpe="text/javascript" src="js/libs/OrbitControls.js"></script>
-    
+    <script trpe="text/javascript" src="js/libs/CanvasRenderer.js"></script>
+    <script trpe="text/javascript" src="js/libs/Projector.js"></script>
+
     <body>
 
         <div id="container"></div>
