Add Gui Parameters Javascript (Static)

--- a/index.html
+++ b/index.html
@@ -33,12 +33,14 @@
         }
     </style>
 
+    <!-- <script src="http://codeittrue.de/onewebmedia/three/jquery-3.0.0.js"></script> -->
     <script type="text/javascript" src="js/three.min.js"></script>
     <script type="text/javascript" src="js/libs/stats.min.js"></script>
     <script trpe="text/javascript" src="js/libs/TrackballControls.js"></script>
     <script trpe="text/javascript" src="js/libs/Detector.js"></script>
+    <script trpe="text/javascript" src="js/libs/dat.gui.min.js"></script>
+    <script trpe="text/javascript" src="js/libs/OrbitControls.js"></script>
     
-
     <body>
 
         <div id="container"></div>
